# elo-ranker

./: .gitignore  main.py  pyproject.toml
src/elo_ranker/: main.py
src/elo_ranker/api/: constants.py  match_maker.py  ranked_entry.py  ranking.py
