[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[prooject]
name = "elo-ranker"
version = "0.1.0"
description = "Elo ranker"
authors = ["Michael Zhang <m.zhang2490@gmail.com>"]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

